--- a/heroku.yml
+++ b/heroku.yml
@@ -1,10 +1,8 @@
 # https://devcenter.heroku.com/articles/heroku-yml-build-manifest
-
+# Officially unsupported, but works.
 build:
   languages:
     - go
 
 run:
-  web: 
-    twitter/main 
-    twitter/auth
+  web: twitter-bot
